# ddexplorer-gemini

./: .gitignore  README.md
backend/: ai_service.py  ai_service_route.py  app.py  nearby_search.py  pyproject.toml  user_management.py  whatsapp_ddexplorer.py
frontend/: cities_ex.py  index.py  pyproject.toml  stylesheet.css
frontend/country_csv_files/: Afghanistan.csv  Albania.csv  Algeria.csv  American Samoa.csv  Andorra.csv  Angola.csv  Anguilla.csv  Antigua and Barbuda.csv  Argentina.csv  Armenia.csv  Aruba.csv  Australia.csv  Austria.csv  Azerbaijan.csv  Bahamas, The.csv  Bahrain.csv  Bangladesh.csv  Barbados.csv  Belarus.csv  Belgium.csv  Belize.csv  Benin.csv  Bermuda.csv  Bhutan.csv  Bolivia.csv  Bonaire, Sint Eustatius, and Saba.csv  Bosnia and Herzegovina.csv  Botswana.csv  Brazil.csv  Brunei.csv  Bulgaria.csv  Burkina Faso.csv  Burma.csv  Burundi.csv  Cabo Verde.csv  Cambodia.csv  Cameroon.csv  Canada.csv  Cayman Islands.csv  Central African Republic.csv  (+201 more)
frontend/css/: stylesheet.css
frontend/data/: 1715805815.212945-gemini_messages  1715805815.212945-st_messages  past_chats_list
frontend/pages/: __init__.py  chat.py  cities.py  grid.py  home.py  poi.py  route.py
frontend/tools/: translation.py
test/: test_whatsapp_webhook.py
